# cros-bazel

./: .bazelrc-BUILD-ignore  .gitignore  BUILD  BUILD.bazel  BUILD.chromiumos_portage_tool  BUILD.project-adhd  BUILD.project-autotest  BUILD.project-chromite  BUILD.project-filegroup  BUILD.project-llvm  BUILD.project-shell-encryption  BUILD.project-systemd  BUILD.project-template  Cargo.toml  DIR_METADATA  OWNERS  OWNERS.clover  PRESUBMIT.cfg  README.md  WORKSPACE  design.md  go.mod  go.sum  link_files.py  navbar.md
build_defs/bool_flag/: BUILD.bazel
build_defs/bool_flag/examples/: BUILD.bazel
build_defs/expand_template/: BUILD.bazel  expand_template.bzl  expand_template.py
build_defs/filter_files/: BUILD.bazel  glob.bzl
build_defs/generate_cargo_toml/: BUILD.bazel  cargo_toml.jinja2  generate_cargo_toml.bzl  generate_workspace_lock.py  generate_workspace_vars.py  workspace.bzl  workspace_cargo_toml.jinja2  workspace_metadata.bzl
build_defs/jinja_template/: BUILD.bazel  jinja_template.bzl  render_template.bzl  render_template.py
build_defs/jinja_template/testdata/: include.jinja2  include.out  simple.jinja2
cc/examples/: BUILD.bazel  hello_world.cc  lib.cc  lib.h  lib_test.cc  main.cc
config/: BUILD  BUILD.bazel
content_mirror/config/: BUILD.bazel  cfg.jinja2  developer.cfg  local_server_dev.cfg  strict.cfg
cros_pkg/example/: BUILD.bazel
cros_pkg/private/: BUILD.bazel  build_tar.py  cros_pkg_filegroup.bzl  deploy.bzl  deploy_local.rs  deploy_local_test.sh  direct_ebuild.bzl  gen_tbz2.rs  gen_tbz2_contents_test.py  manifest.rs  pkg_files.bzl
docs/ide/: BUILD.bazel  configure.py
docs/ide/config/: chromiumos.code-workspace
ebuild/private/: BUILD  BUILD.bazel  binary_package.bzl  build_ebuild.go  build_ebuild.sh  build_ebuild_setup.sh  build_image.bzl  build_sdk.bzl  common.bzl  create_squashfs.go  download_prebuilt.sh  ebuild.bzl  ebuild_src.bzl  ebuild_tar_src.bzl  generate_test_runner.sh  install_deps.bzl  interface_lib.bzl  overlay.bzl  package_set.bzl  run_in_container.go  sdk.bzl  system_zstd.sh
ebuild/private/alchemist/: BUILD.bazel  Cargo.toml  regen-srcs.sh  src.bzl
ebuild/private/rust/: Cargo.toml
images/: BUILD.bazel
module_extensions/private/: BUILD.bazel  extract_tarball.bzl  hub_repo.bzl  symlink.bzl  symlink_test.py
module_extensions/toolchains/: BUILD.bazel  BUILD.sdk.bazel  extension.bzl  extract_sdk.bzl  files.bzl  generate_sysroot.py  generate_sysroot.sh  hermetic_launcher.bzl  sdk_files.bzl
module_extensions/toolchains/cc/: BUILD  BUILD.bazel  clang_selector.cc  features.bzl  toolchain.bzl
module_extensions/toolchains/elf_interpreter/: BUILD.bazel  install.sh  musl_transition.bzl  use_interp_test.cc  use_interp_test.sh
module_extensions/toolchains/files/: BUILD.bazel  files.bzl  sysroot.bzl  toolchain_sdk.bzl
module_extensions/toolchains/hermetic_launcher/: BUILD.bazel  create_hermetic_launcher.py  elf_analyzer.py  elf_analyzer_test.py  hermetic_launcher.bzl
module_extensions/toolchains/rust/: BUILD.bazel  rust_toolchain.bzl
portage/: BUILD.bazel
portage/build_defs/: BUILD.bazel  bashrc.bzl  binary_package.bzl  build_image.bzl  build_sdk.bzl  collect_ebuild_metadata.bzl  collect_logs.bzl  common.bzl  download_prebuilt.sh  ebuild.bzl  ebuild_installer.sh  ebuild_sizing.bzl  extra_sources.bzl  extract_interface.bzl  extract_package_from_manifest.bzl  hash_tracer.bzl  helper.bzl  install_deps.bzl  install_groups.bzl  interface_lib.bzl  overlay.bzl  package_contents.bzl  package_set.bzl  patterns.bzl  sdk.bzl  sdk_to_archive.bzl  setup_board.sh  sysroot.bzl  test_helpers.bzl  transitions.bzl  update_prebuilts.bzl  update_prebuilts.py
portage/build_defs/extract_package_from_manifest/: BUILD.bazel  common.bzl  extract.bzl  files.bzl  files_test.bzl  filter.bzl  package.bzl  package_test.bzl  update_manifest.bzl
portage/common/bazelutil/: BUILD.bazel  runfiles.go
portage/common/chrome-trace/: BUILD.bazel  Cargo.toml
portage/common/chrome_trace/: BUILD.bazel  Cargo.toml
portage/common/cliutil/: BUILD.bazel  Cargo.toml  exit.go
portage/common/container/: BUILD.bazel  Cargo.toml  setup.sh
portage/common/durabletree/: BUILD.bazel  Cargo.toml
portage/common/durabletree_test/: BUILD.bazel  Cargo.toml  defs.bzl
portage/common/extract_tarball/: BUILD.bazel  Cargo.toml
portage/common/fileutil/: BUILD.bazel  Cargo.toml  copy.go  move.go
portage/common/processes/: BUILD.bazel  Cargo.toml
portage/common/run_in_container_lib/: BUILD.bazel
portage/common/tar/: BUILD.bazel  tar.go
portage/common/testdata/: BUILD.bazel  nano-clean-env.tbz2  nano-diff-tar.tbz2  nano-diff-xpak.tbz2  prebuilts.bzl  sysroot.bzl
portage/common/testutil/: BUILD.bazel  Cargo.toml
portage/common/tracing-chrome-trace/: BUILD.bazel  Cargo.toml
portage/common/tracing_chrome_trace/: BUILD.bazel  Cargo.toml
portage/sdk/: BUILD.bazel  repositories.bzl
portage/tools/: fetch-prebuilts  generate-stage2-prebuilts  generate_chrome_prebuilt_config.py  install_packages_to_sysroot.py  run_tests.sh  sdk_repos.sh  update_symlinks.py
prebuilts/: BUILD  BUILD.bazel  repositories.bzl  squashfuse
prebuilts/amd64-host/: BUILD  BUILD.bazel  fakeroot-1.27.tbz2
python/: BUILD.bazel  pip_test.py  python3_test.py  requirements.txt  requirements_lock.txt
python/toolchains/: .gitignore  BUILD.bazel  interpreter.sh  runfiles_to_files.bzl  sitecustomize.py
sdk/: BUILD  BUILD.bazel  repositories.bzl  utils.bzl
sdk/etc/: BUILD.bazel  ld.so.preload  make.conf.board_setup  make.conf.host_setup
workspace_root/: .bazelrc  .bazelversion  BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  link_files.sh  rust_manifests.bzl
workspace_root/.cargo/: config.toml
workspace_root/alchemy/: .bazelrc  BUILD.bazel  Cargo.toml  WORKSPACE.bazel
workspace_root/fwsdk/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
workspace_root/general/: .bazel_fix_commands.json  .bazelignore  MODULE.bazel  WORKSPACE
workspace_root/metallurgy/: .bazelrc
workspace_root/tools/: bazel
zstd/: BUILD.bazel  repositories.bzl  zstd.BUILD.bazel
(+1070 files in other folders)
