# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/build_defs/generate_cargo_toml:workspace_metadata.bzl", "cargo_workspace")

# The group of non-generated packages considered internal to Alchemy.
# If you need to make a non-generated Alchemy target accessible from other
# non-generated Alchemy targets, this is a good default. Of course it's even
# better if you could use a smaller group though. Never use //visibility:public
# in Alchemy targets to avoid unexpected dependencies.
#
# If you need to expose a non-generated Alchemy target to a generated target
# you should instead add `@portage//:__subpacakges__`. This syntax is special
# cased so that the non-generated targets won't depend on the @portage
# repository.
package_group(
    name = "internal",
    packages = [
        "//bazel/...",
        # The top-level package defining a few special targets.
        "//",
    ],
)

# This file is filled with a timestamp in tools/bazel on each bazel invocation.
# Thus, depending on this file will ensure that your action always runs.
filegroup(
    name = "now",
    srcs = [".now"],
    visibility = ["//visibility:public"],
)

cargo_workspace(
    name = "cargo_workspace",
    testonly = True,
    lockfile = "//bazel/rust/alchemy_crates:Cargo.lock",
    manifest = "//bazel/rust/alchemy_crates:Cargo.toml",
    members = [
        "//bazel/portage/common/testutil:cargo_toml",
    ],
)
