# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/ebuild/private:build_image.bzl", "build_image")
load("@portage//:settings.bzl", "BOARD")

# Builds a very minimal image that contains Linux kernel and basic files only.
# The generated image doesn't boot of course, but this target can be useful to
# test the functionality to build images.
build_image(
    name = "chromiumos_minimal_image",
    image_to_build = "base",
    image_file_name = "chromiumos_base_image",
    output_image_file_name = "chromiumos_minimal_image",
    files = [
        "//:scripts_src",
        "@chromite//:src",
    ],
    target_packages = [
        "@portage//sys-apps/baselayout",
        "@portage//sys-kernel/chromeos-kernel-5_15",
    ],
    host_packages = [
        "@portage//internal/sdk:cross-packages",
    ],
    override_base_packages = [
        "sys-apps/baselayout",
        "sys-kernel/chromeos-kernel-5_15",
    ],
    board = BOARD,
    sdk = "@portage//internal/sdk",
    overlays = "@portage//internal/sdk:overlays",
    visibility = ["//:__pkg__"],  # for alias
)

# Builds the base image.
build_image(
    name = "chromiumos_base_image",
    image_to_build = "base",
    image_file_name = "chromiumos_base_image",
    output_image_file_name = "chromiumos_base_image",
    files = [
        "//:scripts_src",
        "@chromite//:src",
    ],
    target_packages = [
        "@portage//virtual/target-os:package_set",
    ],
    host_packages = [
        "@portage//internal/sdk:cross-packages",
    ],
    board = BOARD,
    sdk = "@portage//internal/sdk",
    overlays = "@portage//internal/sdk:overlays",
    visibility = ["//:__pkg__"],  # for alias
)

# Builds the dev image.
build_image(
    name = "chromiumos_dev_image",
    image_to_build = "dev",
    image_file_name = "chromiumos_image",
    output_image_file_name = "chromiumos_image",
    files = [
        "//:scripts_src",
        "@chromite//:src",
    ],
    target_packages = [
        "@portage//virtual/target-os:package_set",
        "@portage//virtual/target-os-dev:package_set",
    ],
    host_packages = [
        "@portage//internal/sdk:cross-packages",
    ],
    board = BOARD,
    sdk = "@portage//internal/sdk",
    overlays = "@portage//internal/sdk:overlays",
    visibility = ["//:__pkg__"],  # for alias
)

# Builds the test image.
build_image(
    name = "chromiumos_test_image",
    image_to_build = "test",
    image_file_name = "chromiumos_test_image",
    output_image_file_name = "chromiumos_test_image",
    files = [
        "//:scripts_src",
        "@chromite//:src",
    ],
    target_packages = [
        "@portage//virtual/target-os:package_set",
        "@portage//virtual/target-os-dev:package_set",
        "@portage//virtual/target-os-test:package_set",
    ],
    host_packages = [
        "@portage//internal/sdk:cross-packages",
    ],
    board = BOARD,
    sdk = "@portage//internal/sdk",
    overlays = "@portage//internal/sdk:overlays",
    visibility = ["//:__pkg__"],  # for alias
)
