# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

string_flag(
    name = "binpkg-cache-strategy",
    build_setting_default = "fast",
    values = [
        "fast",
        "slow",
    ],
)

config_setting(
    name = "binpkg-cache-fast",
    flag_values = {
        ":binpkg-cache-strategy": "fast",
    },
)

string_flag(
    name = "default-stage",
    build_setting_default = "stage2",
)

config_setting(
    name = "stage1",
    flag_values = {
        ":default-stage": "stage1",
    },
)

config_setting(
    name = "stage2",
    flag_values = {
        ":default-stage": "stage2",
    },
)

bool_flag(
    name = "compiled-profiles",
    build_setting_default = True,
)

config_setting(
    name = "compiled-profiles-enabled",
    flag_values = {
        ":compiled-profiles": "True",
    },
)

config_setting(
    name = "compiled-profiles-disabled",
    flag_values = {
        ":compiled-profiles": "False",
    },
)

# This flag is useful when you are comparing packages built using alchemist's
# compiled profiles and packages built using portage profiles. When enabled
# an additional target with the suffix `_portage_profile_test_package` will be
# built and compared for each ebuild target. This happens as a validator
# so it will also check all transitive dependencies as well.
bool_flag(
    name = "enable-portage-config-validator",
    build_setting_default = False,
)

config_setting(
    name = "portage-config-validator-enabled",
    flag_values = {
        ":enable-portage-config-validator": "True",
    },
)

config_setting(
    name = "portage-config-validator-disabled",
    flag_values = {
        ":enable-portage-config-validator": "False",
    },
)
