# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

string_flag(
    name = "binpkg_cache_strategy",
    build_setting_default = "fast",
    values = [
        "fast",
        "slow",
    ],
)

config_setting(
    name = "binpkg_cache_fast",
    flag_values = {
        ":binpkg_cache_strategy": "fast",
    },
)

string_flag(
    name = "default_stage",
    build_setting_default = "stage2",
)

config_setting(
    name = "stage1",
    flag_values = {
        ":default_stage": "stage1",
    },
)

config_setting(
    name = "stage2",
    flag_values = {
        ":default_stage": "stage2",
    },
)

bool_flag(
    name = "compiled_profiles",
    build_setting_default = True,
)

config_setting(
    name = "compiled_profiles_enabled",
    flag_values = {
        ":compiled_profiles": "True",
    },
)

config_setting(
    name = "compiled_profiles_disabled",
    flag_values = {
        ":compiled_profiles": "False",
    },
)

# This flag is useful when you are comparing packages built using alchemist's
# compiled profiles and packages built using portage profiles. When enabled
# an additional target with the suffix `_portage_profile_test_package` will be
# built and compared for each ebuild target. This happens as a validator
# so it will also check all transitive dependencies as well.
bool_flag(
    name = "enable_portage_config_validator",
    build_setting_default = False,
)

config_setting(
    name = "portage_config_validator_enabled",
    flag_values = {
        ":enable_portage_config_validator": "True",
    },
)

config_setting(
    name = "portage_config_validator_disabled",
    flag_values = {
        ":enable_portage_config_validator": "False",
    },
)

string_flag(
    name = "prebuilt_disk_cache",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)
