# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# squashfuse is a binary generated with:
# https://chromium-review.googlesource.com/c/chromiumos/overlays/chromiumos-overlay/+/3827275
#
# It is built with a patch to respond ioctl requests with ENOTTY. This is needed
# for overlayfs to work with squashfuse. See the following thread for details:
# https://lore.kernel.org/lkml/4B9D76D5-C794-4A49-A76F-3D4C10385EE0@kohlschutter.com/T/
#
# TODO: Avoid depending on a prebuilt binary.
exports_files([
    "squashfuse",
])
