# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/ebuild:defs.bzl", "sdk_from_archive", "sdk", "sdk_update", "overlay_set")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "extra_tarball",
    srcs = [
        "//bazel/sdk/etc",
        "//bazel/sdk/mnt/host/source/src/platform2/common-mk",
        "//bazel/sdk/run/lock",
        "//bazel/sdk/usr/bin",
        "//bazel/sdk/usr/lib64",
        "//bazel/sdk/usr/local/bin",
        "//bazel/sdk/usr/src",
    ],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

sdk_from_archive(
    name = "base_sdk",
    src = "@cros-sdk-2022.08.22.085953//file",
    # This rule just extracts an archive, do not bother dispatching to remotes.
    tags = ["no-remote"],
    visibility = ["//visibility:public"],
)

# arm64-generic

pkg_tar(
    name = "arm64-generic_tarball",
    srcs = [
        "//bazel/sdk/build/arm64-generic/build/bin",
        "//bazel/sdk/build/arm64-generic/etc",
        "//bazel/sdk/build/arm64-generic/usr/share/aclocal",
    ],
    extension = "tar.gz",
)

overlay_set(
    name = "arm64-generic_overlays",
    overlays = [
        "//overlays/overlay-arm64-generic",
        "//third_party/eclass-overlay",
        "//third_party/chromiumos-overlay",
        "//third_party/portage-stable",
    ],
    visibility = ["//visibility:public"],
)

sdk(
    name = "arm64-generic-base",
    base = ":base_sdk",
    board = "arm64-generic",
    extra_tarballs = [
        ":extra_tarball",
        ":arm64-generic_tarball",
    ],
    host_deps = [
        "//bazel/prebuilts/amd64-host:docbook-xml-dtd-4_4",
        "//bazel/prebuilts/amd64-host:meson-format-array",
        "//bazel/prebuilts/amd64-host:xcb-proto",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:binutils",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:compiler-rt",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:gcc",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:gdb",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:glibc",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:go",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:libcxx",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:libxcrypt",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:linux-headers",
        "//bazel/prebuilts/amd64-host/cross-aarch64-cros-linux-gnu:llvm-libunwind",
        "//bazel/prebuilts/amd64-host:hps-sdk",
        "//bazel/prebuilts/amd64-host:rust",
    ],
    overlays = ":arm64-generic_overlays",
    visibility = ["//visibility:public"],
)

sdk_update(
    name = "arm64-generic",
    base = ":arm64-generic-base",
    target_deps = [
        "//third_party/chromiumos-overlay/sys-kernel/linux-headers:0",
        "//third_party/chromiumos-overlay/sys-libs/gcc-libs:0",
        "//third_party/chromiumos-overlay/sys-libs/libcxx:0",
        "//third_party/chromiumos-overlay/sys-libs/llvm-libunwind:0",
    ],
    visibility = ["//visibility:public"],
)


# amd64-generic

pkg_tar(
    name = "amd64-generic_tarball",
    srcs = [
        # Skip adding the helper wrappers and see what happens
        # "//bazel/sdk/build/amd64-generic/build/bin",
        "//bazel/sdk/build/amd64-generic/etc",
        "//bazel/sdk/build/amd64-generic/usr/share/aclocal",
    ],
    extension = "tar.gz",
)

overlay_set(
    name = "amd64-generic_overlays",
    overlays = [
        "//overlays/overlay-amd64-generic",
        "//third_party/eclass-overlay",
        "//third_party/chromiumos-overlay",
        "//third_party/portage-stable",
    ],
    visibility = ["//visibility:public"],
)

# TODO: Have alchemist generate this
sdk(
    name = "amd64-generic-base",
    base = ":base_sdk",
    board = "amd64-generic",
    extra_tarballs = [
        ":extra_tarball",
        ":amd64-generic_tarball",
    ],
    host_deps = [
        # Should we consider adding BDEPEND support to remove these 3?
        "//bazel/prebuilts/amd64-host:docbook-xml-dtd-4_4",
        "//bazel/prebuilts/amd64-host:meson-format-array",
        "//bazel/prebuilts/amd64-host:xcb-proto",
        # TODO: Parse the toolchain.conf and generate an SDK with all the appropriate toolchains
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:binutils",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:gcc",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:gdb",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:glibc",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:go",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:libcxx",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:libxcrypt",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:linux-headers",
        "//bazel/prebuilts/amd64-host/cross-x86_64-cros-linux-gnu:llvm-libunwind",
        "//bazel/prebuilts/amd64-host:hps-sdk",
        "//bazel/prebuilts/amd64-host:rust",
    ],
    overlays = ":amd64-generic_overlays",
    visibility = ["//visibility:public"],
)

sdk_update(
    name = "amd64-generic",
    base = ":amd64-generic-base",
    target_deps = [
        "//third_party/chromiumos-overlay/sys-kernel/linux-headers:0",
        "//third_party/chromiumos-overlay/sys-libs/gcc-libs:0",
        "//third_party/chromiumos-overlay/sys-libs/libcxx:0",
        "//third_party/chromiumos-overlay/sys-libs/llvm-libunwind:0",
    ],
    visibility = ["//visibility:public"],
)
