# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/ebuild:defs.bzl", "sdk_from_archive")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "extra_tarball",
    srcs = [
        "//bazel/sdk/etc",
        "//bazel/sdk/mnt/host/source/src/platform2/common-mk",
        "//bazel/sdk/run/lock",
        "//bazel/sdk/usr/bin",
        "//bazel/sdk/usr/lib64",
        "//bazel/sdk/usr/src",
    ],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

sdk_from_archive(
    name = "base_sdk",
    src = "@cros-sdk-2022.08.25.153812//file",
    # This rule just extracts an archive, do not bother dispatching to remotes.
    tags = ["no-remote"],
    visibility = ["//visibility:public"],
)
