# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/ebuild/private:sdk.bzl", "sdk_from_archive")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "extra_tarball",
    srcs = [
        "//bazel/sdk/etc",
        "//bazel/sdk/run/lock",
        "//bazel/sdk/usr/bin",
        "//bazel/sdk/usr/lib64",
        "//bazel/sdk/usr/src",
    ],
    extension = "tar.gz",
    visibility = ["//bazel:internal"],
)

# TODO(b/272275535): Delete all this once platform2_test.py is working
# This is not included in the extra_tarball because the `sdk` rule will
# clear out /mnt/host before generating the layer, so we lose this.
# Instead we inject this as a src file to the ebuild targets.
pkg_tar(
    name = "meson_test_disable_hack",
    srcs = [
        "//bazel/sdk/mnt/host/source/src/platform2/common-mk",
    ],
    extension = "tar",
    visibility = ["//bazel:internal"],
)

bool_flag(
    name = "new-sdk",
    build_setting_default = True,
)

config_setting(
    name = "new-sdk-enabled",
    flag_values = {
        ":new-sdk": "True",
    },
)

sdk_from_archive(
    name = "sdk_from_archive",
    src = select({
        ":new-sdk-enabled": "@cros-sdk-2023.04.05.144808//file",
        "//conditions:default": "@cros-sdk-2022.08.25.153812//file",
    }),
    # This rule just extracts an archive, do not bother dispatching to remotes.
    tags = ["no-remote"],
    visibility = ["//bazel:internal"],
)
