# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel/ebuild:defs.bzl", "overlay_set")
load("//bazel/ebuild/private:build_image.bzl", "build_image")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

alias(
    name = "all_target_packages",
    actual = "@portage//virtual/target-os:package_set",
)

pkg_files(
    name = "scripts_src_files",
    srcs = glob(
        ["scripts/**"],
        exclude = ["scripts/.git/**"],
    ),
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "/mnt/host/source/src",
    strip_prefix = strip_prefix.from_root(),
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "scripts_src",
    srcs = [
        ":scripts_src_files",
    ],
    compressor = "//bazel/ebuild/private:zstd",
    compressor_args = "--threads=0",
    extension = "tar.zst",
    visibility = ["//bazel/ebuild/private/cmd/build_image:__pkg__"],
)

# Define this in the workspace root to prevent //bazel/... from attempting to
# build whole images.
build_image(
    name = "build_image_demo",
    srcs = [
        "//:scripts_src",
        "@chromite//:src",
    ],
    build_deps = [
        # Copied from @portage//virtual/target-os:package_set's deps
        # TODO: Directly refer to @portage//virtual/target-os:package_set
        # TODO(b/269698929): FIX PDEPEND handling.
        "@portage//virtual/target-os",
    ],
    overlays = "//bazel/ebuild/private/cmd/build_image:overlays_build_image",
    sdk = "@portage//internal/sdk",
)

exports_files(["tools/bazel"])
