# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

exports_files([
    "tools/bazel",
    "Cargo.toml",
    "Cargo.lock",
])

alias(
    name = "all_target_packages",
    actual = "@portage//virtual/target-os:package_set",
)

alias(
    name = "chromiumos_minimal_image",
    actual = "//bazel/images:chromiumos_minimal_image",
)

alias(
    name = "chromiumos_base_image",
    actual = "//bazel/images:chromiumos_base_image",
)

alias(
    name = "chromiumos_dev_image",
    actual = "//bazel/images:chromiumos_dev_image",
)

alias(
    name = "chromiumos_test_image",
    actual = "//bazel/images:chromiumos_test_image",
)

# A convenient alias to run alchemist.
#
# Example:
#   bazel run //:alchemist -- --board=amd64-generic dump-package sys-apps/attr
alias(
    name = "alchemist",
    actual = "@alchemist//:release/alchemist",
    visibility = ["//visibility:private"],
)
