# This file is used to generate your workspace-level Cargo.toml.

[workspace]
# List all local crates here.
#
# If you are adding to this list, make sure you also update the list on
# rust_manifests.bzl.
members = [
    "bazel/ebuild/private/alchemist",
    "bazel/ebuild/private/cmd/build_image",
    "bazel/ebuild/private/cmd/build_package",
    "bazel/ebuild/private/cmd/extract_interface",
    "bazel/ebuild/private/cmd/install_deps",
    "bazel/ebuild/private/cmd/run_in_container",
    "bazel/ebuild/private/common/bazelutil",
    "bazel/ebuild/private/common/cliutil",
    "bazel/ebuild/private/common/fileutil",
    "bazel/ebuild/private/common/makechroot",
    "bazel/ebuild/private/common/mountsdk",
    "bazel/ebuild/private/common/portage/binarypackage",
    "bazel/ebuild/private/common/processes",
    "bazel/ebuild/private/common/run_in_container_lib",
    "bazel/ebuild/private/common/standard/version",
    "bazel/ebuild/private/common/tar",
    "rules_cros/toolchains/rust/examples/hello_world",
    "rules_cros/toolchains/rust/examples/local_crate",
    "rules_cros/toolchains/rust/examples/use_local_crate",
    "rules_cros/toolchains/rust/examples/use_third_party_crate",
]

[workspace.dependencies]

# List third-party deps here.
anyhow = { version = "1.0.66", features = ["backtrace"] }
base64 = "0.20.0"
bytes = "0.4.12"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.3"
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
libc = "0.2.139"
log = "0.4.17"
nix = { version = "0.26.1", features = ["fs", "ioctl"] }
nom = "7.1.1"
nom_locate = "4.0.0"
nom-regex = "0.2.0"
once_cell = "1.16.0"
path-absolutize = "3.0.14"
pathdiff = "0.2.1"
proptest = "1.0.0"
rayon = "1.6.0"
regex = "1.7.0"
rpds = "0.12.0"
runfiles = "0.1.0"
scopeguard = "1.1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
signal-hook = "0.3.14"
strum = "0.24.1"
strum_macros = "0.24.3"
tar = "0.4.38"
tempfile = "3.3.0"
tera = { version = "1.17.1", default-features = false }
thiserror = "1.0.37"
tinytemplate = "1.2.1"
topological-sort = "0.2.2"
url = "2.3.1"
users = "0.11.0"
walkdir = "2.3.2"
zstd = "0.12.1"
