# We don't need to name our module, but the default is __main__, which isn't
# very meaningful.
module(name = "chromiumos", version = "0.1")

bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "rules_python", version = "0.4.0")

# When we update to bazel 6, we will update the following packages:
# * rules_pkg appears to fail to build because of a bug in bazel itself.
#   However, experimentation reveals that this resolves itself with bazel 6.
# * rules_go and gazelle both require the repo_name attribute, which is only
#   supported in bazel 6.
