# We don't need to name our module, but the default is __main__, which isn't
# very meaningful.
module(name = "chromiumos", version = "0.1")

bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "protobuf", version = "3.19.6")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "rules_pkg", version = "0.7.0")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_python", version = "0.4.0")
bazel_dep(name = "zlib", version = "1.2.13")

# Skip rules_go and gazelle, as they are both marked as
# "highly experimental, subject to change at any time"
